--- a/appendices/maps.tex
+++ b/appendices/maps.tex
@@ -29,7 +29,7 @@ In analogue to materials, the size of an administrative region is then defined a
      \end{subfigure}
      \hfill
 
-	\caption{Panel (a) demonstrates how the number of neighbours of an administrative region defines the region size (as indicated by central numbers), in analogue with generic polygons. Panel(b) gives examples of the two defect types found in maps. Point defects (yellow) occur when a region is fully inscribed within another, and line defects (pink) when a region sits on the boundary between two others.}
+	\caption{Panel (a) demonstrates how the number of neighbours of an administrative region defines the region size (as indicated by central numbers), in analogue with generic polygons. Panel (b) gives examples of the two defect types found in maps. Point defects (yellow) occur when a region is fully inscribed within another, and line defects (pink) when a region sits on the boundary between two others.}
 	\label{appfig:mapdefects}
 \end{figure}
 
@@ -37,7 +37,7 @@ Analysis of these geopolitical networks is slightly complicated by the possible 
 Defects arise when regions have $k<3$ neighbours, either as a result of small imperfections in the boundary data or from legitimate region arrangements.
 For instance, if $k=0$, the region is an island, if $k=1$ a region is fully inscribed within another (usually indicative of a large urban area) and if $k=2$ a region sits on a ring edge.
 Examples of these defects are given in figure \ref{appfig:mapdefa}.
-As these structures are primarily for illustrative purposes, these defects can be simply discounted for the purposed of the network analysis.
+As these maps are primarily for illustrative purposes, these defects can be simply discounted for the purposed of the network analysis.
 A summary of the results from these geopolitical tilings is given in table \ref{tab:mapnet}.
 
 \begin{table}[bt]
@@ -89,6 +89,6 @@ A summary of the results from these geopolitical tilings is given in table \ref{
          \label{appfig:mapd}
      \end{subfigure}
 
-	\caption{Geopolitical regions used for network analysis, in addition to the communes of Switzerland in figure \ref{fig:ne7}. Regions on sea frontiers are neglected, as are those completely surrounded by another region (shaded white).}
+	\caption{Geopolitical regions used for network analysis (as indicated in captions), in addition to the communes of Switzerland in figure \ref{fig:ne7}. Regions on sea frontiers are neglected, as are those completely surrounded by another region (shaded white).}
 	\label{appfig:maps}
 \end{figure}
