--- a/appendices/voronoi.tex
+++ b/appendices/voronoi.tex
@@ -50,7 +50,7 @@ It is also generalisable to arbitrary dimensions.
          \label{appfig:vorconvexhull4}
      \end{subfigure}
 
-	\caption{A point set (panel a) in ${\rm I\!R}^2$ undergoes the lifting transformation, $T$, mapping it onto a paraboloid in ${\rm I\!R}^3$ (panel b). The projection of the lower convex hull back onto the horizontal plane gives the Delaunay triangulation (panel c), from which the Voronoi diagram can be obtained (panel d).}
+	\caption{A point set (panel (a)) in ${\rm I\!R}^2$ undergoes the lifting transformation, $T$, mapping it onto a paraboloid in ${\rm I\!R}^3$ (panel (b)). The projection of the lower convex hull back onto the horizontal plane gives the Delaunay triangulation (panel (c)), from which the Voronoi diagram can be obtained (panel (d)).}
 	\label{appfig:vorconvexhull}
 \end{figure}
 
