--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,10 +1,10 @@
 Investigations into \td{} network\--forming materials have renewed importance due to the experimental synthesis of ultra\--thin films of carbon, silica and aluminosilicate glasses.
-Microscopy on the disordered phases of these materials reveals a percolating ring structure, identifying them as candidates for range of technologically useful materials, with applications including catalysis and gas separation.
+Microscopy on the disordered phases of these materials reveals a percolating ring structure, identifying them as candidates for a range of technologically useful materials, with applications including catalysis and gas separation.
 The ability to characterise, understand and control the structure of the pore landscape in such materials is therefore central to their further development.
 
 The overall aim of this thesis is to improve the simulation and characterisation of \td{} disordered materials.
 The key is to accurately quantify and reproduce the ring structure, described by the ring size distribution and ring\--ring correlations.
-This will be achieved by relating previous empirical laws (namely \lm's law and the \aw{} law), to well\--defined metrics in network science, and developing a variety of \mc{} methods to generate networks with controllable ring structure and topologies.
+This will be achieved by relating previous empirical laws (namely \lm's law and the \aw{} law), to well\--defined metrics in network science, and developing a variety of \mc{} methods to generate networks with controllable ring structures and topologies.
 
 The first of these methods will be a sequential growth algorithm to construct triangle rafts (a proxy for silica bilayers), which will be shown to produce configurations commensurate with those from experiment.
 Following from this, a modified bond switching algorithm will be used to investigate more generic systems, spanning a variety of atomic coordination environments, potential models and topologies. 
