--- a/text/acknowledgements.tex
+++ b/text/acknowledgements.tex
@@ -1,11 +1,34 @@
-%\subsection*{Personal}
-
-%So long, and thanks for all the fish.
-
 \subsection*{Institutional}
 
-I am very grateful for the institutional support that made this thesis possible, and extend my thanks to the EPSRC Centre for Doctoral Training in Theory and Modelling in Chemical Sciences (grant EP/L015722/1), to the UK Materials and Molecular Modelling Hub for computational resources (grant EP/P020194/1) and to the AWE.
+I am very grateful for the institutional support that made my DPhil possible, and extend my thanks to the EPSRC Centre for Doctoral Training in Theory and Modelling in Chemical Sciences (grant EP/L015722/1), to the UK Materials and Molecular Modelling Hub (grant EP/P020194/1) and to the AWE.
 
 \vspace{\baselineskip}
 
-\noindent Ministry of Defence \copyright British Crown Copyright 2020/AWE
+\noindent Ministry of Defence \copyright{} British Crown Copyright 2020/AWE
+
+\subsection*{Personal}
+
+The working title of this thesis was ``Rings and Things'' and I have thoroughly enjoyed this pseudo\--random walk of scientific discovery, not least because of the people who made it both productive and fun, and whose help I would like to recognise. 
+
+Firstly, I would like to thank Mark Wilson, for being an excellent supervisor and mentor.
+I am very appreciative of him for a great many reasons: for providing continual encouragement and direction regardless of whatever random idea or erratic diagram I threw at him; for instigating ``Good Idea Tuesday'' and most of all (I can't stress this enough) for never following through with his plan for a group meeting on the life and music of Frank Zappa.
+People say that students tend to turn into their supervisors over the course of a DPhil and, if this is the case, I can think of no better compliment.
+
+In terms of academic support, my thanks also go to Alice Thorneywork and Roel Dullens for generously providing experimental colloid data, to Andrew Goodwin for his discussions on procrystalline lattices and to Phil Salmon for his assistance in understanding persistent homology.
+I would also like to thank Claire Vallance for her help with the Faraday Division, along with Fernanda Duarte for the teaching opportunities at Hertford College, which I greatly enjoyed.
+Additionally, I am grateful to the members of the Wilson group: to David, for recruiting me, to Dom, whose late night lab sessions helped shape the early parts of my DPhil, and to Matt, for never ceasing to find new ways to overcomplicate my code.  
+Thanks also to Leema and Linda, who ran a tight ship and always kept me on track.
+
+I am also appreciative to everyone in the TMCS and the Theory Wing who made the office such a great place to work.
+The 1000 day countdown timer Tim gave me is just ticking down, so I'll briefly say thank you to Laszlo, Viivi, Rocco, Tom, Max, Darren and Martin; for providing coffee when in need of motivation, beer in times of distraction and good laughs throughout.
+Gabriel too deserves a thank you, of course, for being a friend like no other since our undergraduate days at LMH.
+A special mention also for Jonny, who became a good friend in the short time I knew him, and whose intelligence and humour is greatly missed. 
+
+I would like to extend thanks to my family. 
+To Charlie and especially Mum, for always believing in me and providing a fantastic education.
+I would not have been able to achieve this without you.
+
+As anyone who picks this volume off our bookshelf in the future might expect\footnote{From between the Booker prize winners no less \-- I appreciate the gesture}, my final thanks are reserved for you, Aurelia.
+From when I first started this project, and we were in separate cities, to being locked\--down together, as I finished writing up, your advice, encouragement and support have been invaluable.
+You are the source of all my inspiration and you have made this period truly special.
+I am excited to find out where life will take us next.
