--- a/text/targeted_opt.tex
+++ b/text/targeted_opt.tex
@@ -18,7 +18,7 @@ A central theme in this thesis is that the characterisation of the disorder in \
 For 3\--coordinate atomic materials the mean ring size is constrained to six by Euler's law, which allows the variance of the ring size distribution, $\mu_2$, to act as a proxy measure for disorder (see sections \ref{s:eulerslaw} and \ref{s:lemaitre}).
 The same set of ring statistics can however lead to a large number of different ring arrangements, as shown in figure \ref{fig:zach}.
 These can be further quantified by the \aw{} parameter, $\alpha$, which measures the ring\--ring correlations.
-An interesting observation across a wide range of experimental systems, is that the measured value of the \aw{} parameter lies in a tight range of $\alpha\approx0.15\rightarrow 0.3$ \cite{Zsoldos1999}.
+An interesting observation across a wide range of experimental systems is that the measured value of the \aw{} parameter lies in a tight range of $\alpha\approx0.15\rightarrow 0.3$ \cite{Zsoldos1999}.
 This effect is also seen in computational studies, including for example the previous chapter.
 
 Whilst it is necessary for good computational models to capture these measures accurately, they do not give insight into \textit{why} such configurations are preferred. 
@@ -183,7 +183,7 @@ In addition whereas the silica distribution should be easily achievable by the t
 
 \subsection{Limits of the \aw{} Parameter}
 
-To begin mapping the configurational space of these atomic networks, the range of accessible $\alpha$ values for the aG system can be determined by generating periodic networks containing 10000 rings with $0.1\leq p_6 \leq 0.9$. 
+To begin mapping the configurational space of these atomic networks, the range of accessible $\alpha$ values for the aG system can be determined by generating periodic networks containing $10^5$ rings with $0.1\leq p_6 \leq 0.9$. 
 The aim of these simulations is to try and probe the topological limits of $\alpha$, and so a high number of \mc{} steps can be used, $10^{9}$, without the need for geometry optimisation.
 Visualisations of the output of the targeted optimisation algorithm are given in figure \ref{fig:toptconfigs}, for $p_6=0.4$ and $\alpha=-0.3\rightarrow 0.3$.
 These images give a good qualitative feel for the physical meaning of the \aw{} parameter: at low $\alpha$ similar sized rings tightly cluster together, dispersing as $\alpha$ increases to favour dissimilar ring pairings.
@@ -241,7 +241,7 @@ In addition, the range of accessible values, $\Delta\alpha=\alpha_{\mathrm{max}}
 
 \subsection{Structure and Energetics}
 
-To explore the structural properties of the aG networks at different values of $p_6$ and $\alpha$, 100 periodic networks containing 10000 rings, were constructed for $p_6=0.2,0.4,0.6,0.8$. 
+To explore the structural properties of the aG networks at different values of $p_6$ and $\alpha$, 100 periodic networks containing $10^5$ rings, were constructed for $p_6=0.2,0.4,0.6,0.8$. 
 These simulations were performed with geometry optimisation and so also provide information on the physical limits on $\alpha$.
 Figure \ref{fig:toptenergy1} displays the mean and standard deviation of the total potential energy for each $p_6$ atomic network across a range of $\alpha$ values. 
 It can be seen that the energy minimum in each case is only weakly dependent on the value of $p_6$, varying from $\alpha\simeq{0.23}$ at $p_6=0.8$ to $\alpha\simeq{0.27}$ at $p_6=0.2$, and close to the value of $\alpha$ seen across many natural systems. 
@@ -322,7 +322,7 @@ In addition, the position of the first peak shifts to smaller $r$ as $\alpha$ is
 \end{figure}
 
 These figures also show significant structural evolution beyond the nearest-neighbour length scale. 
-As $\alpha$ becomes more positive, peaks emerge in $g_{55}\left(r\right)$ at $r/r_{55}^0\sim{1.8}$ and $\sim{2.3}$. 
+As $\alpha$ becomes more positive, peaks emerge in $g_{55}\left(r\right)$ at $r/r_{55}^0\approx{1.8}$ and $\approx{2.3}$. 
 An increase in $\alpha$ corresponds to a greater tendency for 7\--rings to
 be near\--neighbours to 5\--rings and, in turn, increases the probability of the same 7\--ring having a second 5\--ring near\--neighbour. 
 In simple geometric terms, the second 5\--ring can occupy three possible sites around the 7\--ring, the non\--adjacent positions corresponding to the developing peaks. 
@@ -332,14 +332,14 @@ Similar analysis was performed on 100 generated \zach{} and \sioii{} networks.
 Although the algorithm requires the fit to equation \eqref{eq:aboavweaire} to be exactly linear for the aG system, for broader ring distributions this is no longer the case. 
 However, for the \zach{} configuration the linear regression ($R^2$) coefficient was always in excess of $0.995$, and for the silica the average $R^{2}$ was $0.979$, representing a very good fit. 
 Figure \ref{fig:toptenergy1} shows the energies of both the \zach{} and \sioii{} systems as a function of $\alpha$. 
-Both cases resemble those for the aG with energy minima at $\alpha\sim{0.25}$. The silica curve shows smaller curvature reflecting the broader distribution
+Both cases resemble those for the aG with energy minima at $\alpha\approx{0.25}$. The silica curve shows smaller curvature reflecting the broader distribution
 of ring sizes whilst the \zach{} curve shows a greater curvature reflecting the ``extreme'' (\ie{} physically unrealistic) nature of the distribution.
 In addition it proved difficult to generate low $\alpha$ configurations ($\alpha<-0.1$) for the Zachariasen network.
 
 Figures \ref{fig:toptrdf3} and \ref{fig:toptrdf4} show two key RDFs for the \zach{} configuration, $g_{44}\left(r\right)$ and $g_{88}\left(r\right)$, highlighting the spatial correlations between the smallest and largest rings in the system. 
 The effects of changing $\alpha$ on $g_{44}\left(r\right)$ are dramatic with strong nearest\--neighbour clustering at negative values. 
 In this case, however, the nearest-neighbour 4-4 correlations do vanish at high $\alpha$ as 4\--8 nearest\--neighbour correlations dominate but the 8\--ring is large enough to accommodate up to four 4\--ring nearest\--neighbours without any 4\--4 neighbouring pairs. 
-Again this is demonstrated through the next nearest neighbours by the 8\--4\--8 peak developing at $r/r_{88}^0\sim 1.4$.
+Again this is demonstrated through the next nearest neighbours by the 8\--4\--8 peak developing at $r/r_{88}^0\approx 1.4$.
 
 
 \section{Ring Percolation in Amorphous Graphene}
@@ -472,7 +472,7 @@ The percolation threshold in this case is then approximated by as the occupancy,
          \label{fig:percsub4}
      \end{subfigure}
      
-     \caption{Panel (a) gives an example disordered aG ring structure and panels (b)\--(d) the associated ring subgraphs, as indicated in the figure captions. Each subgraph contains only vertices and edges pertaining to the given ring size.}
+     \caption{Panel (a) gives an example disordered aG ring structure and panels (b)\--(d) the associated $k$\--ring subgraphs, as indicated in the figure captions. Each subgraph contains only vertices and edges pertaining to the given ring size.}
      \label{fig:subgraphs}
 \end{figure}
 
@@ -523,7 +523,7 @@ For each state point, $100$ networks were sampled starting from different random
      \end{subfigure}
      \hfill
      
-     \caption{Percolation in aG configurations generated via targeted optimisation. Panels (a) and (b) map percolation as a function of $\alpha$ and $p_6$, $p_7$ respectively (dashed line indicates interpolated data). The percolation threshold is defined as when $P_\infty=\frac{1}{2}$. Panel (c) gives the phase behaviour of these systems: phase I contains a giant component in the 7\--ring subgraph; phase II no giant components in any subgraph; phase III a giant component in the 6\--ring subgraph.}
+     \caption{Percolation in aG configurations generated via targeted optimisation. Panels (a) and (b) map percolation as a function of $\alpha$ and $p_6$, $p_7$ respectively (dashed line indicates interpolated data, both share the same legend). The percolation threshold is defined as when $P_\infty=\frac{1}{2}$. Panel (c) gives the phase behaviour of these systems: phase I (blue area) contains a giant component in the 7\--ring subgraph; phase II (grey area) no giant components in any subgraph; phase III (red area) a giant component in the 6\--ring subgraph.}
      \label{fig:percolationres}
 \end{figure}
 
@@ -610,21 +610,22 @@ In this diagram there are three phases:
 From this phase behaviour it is evident that relatively low values of $p_6$ must be achieved before the percolation of 6\--rings is broken.
 In addition it is unlikely that phase I could be experimentally realised and percolation of the 7\--rings achieved. 
 This is because from maximum entropy, the most disordered lattice possible would have $p_5=p_6=p_7=\frac{1}{3}$ which is on the fringe of the percolation threshold for $p_7$, and would necessitate a value of $\alpha$ much lower than is currently seen experimentally.
-This could have implications when designing materials, for which there are eigenstates which are localised on specific ring sizes \cite{Kapko2010,Zhu2016}.
+This could have implications when designing materials, for which there are eigenstates localised on specific ring sizes \cite{Kapko2010,Zhu2016}.
 
 
 
 
 \section{Chapter Conclusions}
 
-An innovative method has been presented to generate \td{} network materials with well defined topology. 
+An novel method has been presented to generate \td{} network materials with well defined topology. 
 This targeted \mc{} search algorithm allows configurations to be constructed which have precise ring size distributions and ring\--ring correlations.
 The advantage of this approach is that configurations can be produced rapidly with controllable properties; which may lie outside experimentally or physically accessible regions of phase space.
 These configurations may then be used as starting points for further investigations.
 For example, the algorithm outlined in this work has already been utilised to study the mechanical properties of vitreous silica under deformation \cite{Bamer2020,Ebrahem2020a}.
+
 In this chapter the targeted optimisation method was employed to probe the physical meaning of the \aw{} parameter.
 The effect of $\alpha$ on the ring structure has been quantified through partial RDFs, and the energetic minima for a range of systems has been shown to correspond well with values commonly found in nature.
-Finally, the method was employed in a study of the ring percolation in amorphous graphene, with the phase behaviour quantified in terms of the ring statistics and \aw{} parameter.
+Finally, the method was used in a study of the ring percolation in amorphous graphene, with the phase behaviour quantified in terms of the ring statistics and \aw{} parameter.
 
  
 
