--- a/text/theory.tex
+++ b/text/theory.tex
@@ -136,7 +136,7 @@ This network is to at least first order indeterminable from a crystalline hexago
      \end{subfigure}
      \hfill
      
-     \caption{Panel (a) gives an example of a 3\-- coordinate periodic atomic network with disordered ring structure. Nodes and links represent atoms and bonds respectively where rings are coloured by size. Panel (b) gives the corresponding ring network where nodes and links represent rings and their adjacencies, where nodes are coloured by degree. Panel (c) shows the dual relationship between the atomic and ring networks, where the node degree in the ring network is equal to the ring size in the atomic network.}
+     \caption{Panel (a) gives an example of a 3\--coordinate periodic atomic network with disordered ring structure. Nodes and links represent atoms and bonds respectively where rings are coloured by size. Panel (b) gives the corresponding ring network where nodes and links represent rings and their adjacencies, where nodes are coloured by degree. Panel (c) shows the dual relationship between the atomic and ring networks, where the node degree in the ring network is equal to the ring size in the atomic network.}
      \label{fig:graphdual}
 \end{figure}
 
@@ -252,7 +252,7 @@ Much of the richness in the structural behaviour of \td{} physical networks stem
          \label{fig:latticesfull98}
      \end{subfigure}
      
-     \caption{Panels (a)\--(c) give regular planar tilings of 6\--, 5\-- and 4\-- rings, where the ring size is related to the underlying atomic coordination. Panels (d) and (e) show the 3\-- and 4\-- coordinate tilings in spherical topology, where the mean ring size is reduced due to the change in the Euler characteristic.}
+     \caption{Panels (a)\--(c) give planar tilings of 6\--, 5\-- and 4\-- rings, where the ring size is related to the underlying atomic coordination. Panels (d) and (e) show the 3\-- and 4\-- coordinate tilings in spherical topology, where the mean ring size is reduced due to the change in the Euler characteristic.}
      \label{fig:lattices}
 \end{figure}
 
