--- a/text/general_networks.tex
+++ b/text/general_networks.tex
@@ -14,7 +14,7 @@ The effect on these network properties is explored by systematically changing th
 So far this thesis has focussed on 3\--coordinate atomic networks such as silica and amorphous graphene.
 These atomic systems can however be considered a subset of a much larger class of \td{} networks which occur throughout the natural world (see figure \ref{fig:networkexamples}).
 Such networks emerge across all disciplines and span many orders of magnitude in size.
-In the physical sciences, random tessellations are not restricted to atomic materials, but are observed in foams \cite{Durand2011,Tong2017,Noever1992}, crack\--patterns  (in dessicated films, ceramics \etc), as well as in colloidal films through the Voronoi construction \-- to name a few \cite{Ma2019,Earnshaw1994,Allain1995,Moncho-Jorda2000}.
+In the physical sciences, random tessellations are not restricted to atomic materials, but are observed in foams, crack\--patterns  (in dessicated films, ceramics \etc), as well as in colloidal films through the Voronoi construction \-- to name a few \cite{Durand2011,Tong2017,Noever1992,Ma2019,Earnshaw1994,Allain1995,Moncho-Jorda2000}.
 Similar mosaics can also be seen in the biological world in the form of epithelial cells and polymer networks such as collagen \cite{Honda1978,Carter2017,Kim2016,Broedersz2014}, as well as in geology in the guise of rock formations and geography in context of geopolitical borders \cite{Weaire1984,Goehring2014,LeCaer1993}.
 Whilst this last example may seem to fall into the category of seemingly more esoteric offerings from the literature (including studies on crocodile scales and oil paintings \cite{Milinkovitch2019,Flores2017}), it provides an interesting insight into the formation of tessellations through random point processes.
 Although man\--made maps are nominally carefully constructed, the influence of random geographical features serve to generate tessellations which are entirely consistent with others found in the natural world.
@@ -81,7 +81,7 @@ To demonstrate the effectiveness and potential of this approach, results will be
      \end{subfigure}
 
      \caption{Two-dimensional networks emerge in diverse physical systems and span a range of length scales, coordination environments,
-and topologies: (a) 3-coordinate, bond\--length controlled network, \eg, glass; (b) 3\--coordinate, angle controlled network, \eg{} foam; (c) 4\--coordinate network; (d) 3\--coordinate network in spherical geometry, \eg{} nonclassical fullerene; (e) triangle raft, \eg{} silica bilayer; (f) hard disk Voronoi \eg{} colloidal monolayer; and (g) communes of Switzerland. Rings are coloured similarly according to size with blue, grey, and red indicating smaller than, equal to, and greater than the mean ring size, respectively.}
+and topologies: (a) 3-coordinate, bond length controlled network, \eg, glass; (b) 3\--coordinate, angle controlled network, \eg{} foam; (c) 4\--coordinate network; (d) 3\--coordinate network in spherical geometry, \eg{} nonclassical fullerene; (e) triangle raft, \eg{} silica bilayer; (f) hard disk Voronoi \eg{} colloidal monolayer; and (g) communes of Switzerland. Rings are coloured similarly according to size with blue, grey, and red indicating smaller than, equal to, and greater than the mean ring size, respectively.}
      \label{fig:networkexamples}
 \end{figure}
 
@@ -113,8 +113,8 @@ Network science offers an opportunity to unite the study of these disparate phys
 Much of the groundwork for this has been laid in chapter \ref{ch:networktheory}, but there are some important additions, namely the introduction of the assortativity to describe ring\--ring correlations.
 Some of the key aspects which were introduced in chapter \ref{ch:networktheory} will be briefly recapped, before these extensions are highlighted.
 
-Chapters \ref{ch:bilayers} and \ref{ch:targetedopt} of this thesis focussed on planar atomic systems which had a fixed coordination of three.
-The main difference in this chapter is that the scope has increased to include networks with variable coordination and topologies.
+Chapters \ref{ch:bilayers} and \ref{ch:targetedopt} of this thesis focus on planar atomic systems which have a fixed coordination of three.
+The main difference in this chapter is that the scope is widened to include networks with variable coordination and topologies.
 For generic physical networks the equivalent of the atomic coordination number, $c$, is not necessarily precisely defined by an atomic species. 
 The consequence of this is that the mean ring size as dictated by Euler's law is no longer always six, but rather determined by equations \eqref{eq:2dplanarcases} and \eqref{eq:2dsphericalcases}; so that for example a network of $c=4$ will have a mean ring size of $\ki=4$.
 That being said, the majority of naturally occurring networks still have $c=3$, as higher order sites are unstable with respect to small perturbations, with for example a 4\--coordinate site readily splitting into two 3\--coordinate sites \cite{Caer1993}.
@@ -151,7 +151,7 @@ Enforcing this condition often leads to a less satisfactory fit.
 The consequences of the difficulty in obtaining an accurate \aw{} fit are naturally that the resulting $\alpha$ parameter has associated with it a degree of uncertainty.
 Yet even in the case where the \aw{} law seems wholly appropriate, there is still a difficulty in fully interpreting its meaning.
 It is not intuitive what the actual value of $\alpha$ represents nor its limits.
-Even for a simple system of $\left[5,6,7\right]$ rings, equation \eqref{eq:agalpha} illustrated that the relationship between ring structure and $\alpha$ is non\--trivial.
+Even for a simple system of $\left\{5,6,7\right\}$ rings, equation \eqref{eq:agalpha} illustrated that the relationship between ring structure and $\alpha$ is non\--trivial.
 More generally, it was shown in section \ref{s:awlaw}, if rings are arranged purely randomly that $\alpha=-\frac{\mu_2}{\ki^2}$, but without a well\--defined upper limit for comparison interpretation remains restricted.
 This equation also highlights that $\alpha$ is dependent on the ring statistics and that its sign is an insufficient classifier for positive or negative correlation.
 Hence even if a high quality fit is achieved, a combination of these effects make it difficult to draw accurate comparisons between different systems.
@@ -296,7 +296,7 @@ The specificities of the algorithm will however depend on the exact nature of th
 
 The choice of the starting lattice can be used to determine the system properties \ie{} the atomic coordination environments and topologies (see table \ref{tab:lattices} and figure \ref{fig:lattices}).
 This is because in the bond switching algorithm, the node degree distribution of the atomic network is constant, and hence from equation \eqref{eq:avdegree} so is mean node degree of the dual network.
-Therefore whichever topology, atomic coordinations and mean ring size the system is initialised with will be preserved throughout the simulation.
+Therefore whichever topology, atomic coordinations and mean ring size the system is initialised with, will be preserved throughout the simulation.
 
 \begin{table}
    \centering
@@ -525,7 +525,7 @@ They are as follows:
 	In a simulation, the system was thermalised with $2\times 10^5$ random moves, and annealed over a further $4\times 10^6$ moves. 
 	A series of different potential models were also used with bond length/angle force constant ratios of $\fk_r/\fk_\theta=16,4,1,1/4$. 
 	For each parameter set, 100 simulations were performed starting from different random seeds.
-	\item \textbf{Triangle rafts}: networks of $1000$ rings across a temperature range of $T=10^{-4.5}\rightarrow10^{-1.5}$, as outlined in section \ref{s:triangleraft}, totalling some $27,500$ configurations.  
+	\item \textbf{Triangle rafts}: networks of $1000$ rings across a temperature range of $T=10^{-4.5}\rightarrow10^{-1.5}$, as outlined in section \ref{s:triangleraft}, totalling some $27500$ configurations.  
 	For each temperature, 100 simulations were performed with different random seeds and the results averaged.
 	\item \textbf{Hard disk \mc}: systems of $1000$ disks at packing fractions in the range $\phi=0.0\rightarrow0.77$.
 	Each simulation comprised cycles of $1000$ random displacement moves, with $10^5$ equilibration cycles, $10^5$ production cycles and with sampling every 10 production cycles. 
@@ -566,9 +566,10 @@ This primarily focusses on the network properties introduced in chapter \ref{ch:
 \label{s:gendegreedist}
 
 The degree distributions of physical networks are discussed in terms of Lemaitre's law; with the distribution variance, $\mu_2$, plotted against the proportion of rings of mean size.
-Figure \ref{fig:lmgena} presents these data for a range of 3\--coordinate systems comprising experimental, computational and theoretical.
+Figure \ref{fig:lmgena} presents these data for a range of experimental, computational and theoretical 3\--coordinate systems.
 There are many things to note, but primarily it can be seen that regardless of the nature of the underlying system, all data fit very well with the maximum entropy solution provided by \lm{}'s law.
 Whilst \lm's law highlights the similarities between these systems, it is also important to examine some of their differences. For example, what determines where a system sits on the \lm{} curve \ie{} what controls the number of hexagons?
+
 For materials this is based on energetics \-- the strain associated with bond and angle distortions. For instance, experimentally silica bilayers have more diverse ring statistics than graphene owing to the reduction in ring strain due to the presence of oxygen linkages \cite{Buchner2017}.
 Even for the graphene samples which have been modified by an electron beam (pink diamonds), the disorder does not approach that of the silica glasses (orange hexagons).
 For the colloid systems (blue circles) however, the rings are formed from the Voronoi tessellation, with no intrinsic cost to distortions and instead it is the packing fraction, $\phi$, which determines $p_6$.
@@ -679,7 +680,7 @@ Panels (b)\--(e) show common defects found in microcrystalline systems, with the
      \label{fig:assortgen}
 \end{figure}
 
-For all the systems we note that there are different regimes, with the high $p_6$ limit corresponding to configurations best described as crystalline with defects rather than truly amorphous as in the low $p_6$ limit \-- with the two often being linked by a phase transition.
+For all the systems there exist different regimes, with the high $p_6$ limit corresponding to configurations best described as crystalline with defects rather than truly amorphous as in the low $p_6$ limit \-- with the two often being linked by a phase transition.
 The high $p_6$ limit can be rationalised by considering the frequency of common defect types at infinite dilution in a hexagonal lattice (see figures \ref{fig:defect33}\--\ref{fig:defect0}) \cite{Marcus1997,Bjorkman2013}.
 These can be calculated by considering the explicit edge joint probability distribution for a specific defect.
 For example, for the Stone\--Wales defect \ref{fig:defect25}, each 5\--ring has two 7\--ring neighbours, and each 7\--ring two 5\--ring and one 7\--ring neighbours such that:
@@ -706,15 +707,17 @@ Similarly the rigidity of the triangle units in the triangle raft method leads t
 As $p_6$ decreases more defects are introduced and the system becomes truly amorphous.
 Again one can posit that as the hard disk model has no energetic term, it is able to incorporate less correlated defects, and in the low packing fraction the hard disk model provides an estimate for the Poisson Voronoi limit of $r\approx-0.15$.
 
-Again the effects of coordination environment and potential model on assortativity in complex networks can be demonstrated using bond switching.
+The effects of coordination environment and potential model on assortativity in complex networks can also be demonstrated using bond switching.
 Figure \ref{fig:assortmixa} shows such a comparison, where the assortativity is plotted against the primary ring size for different coordination environments, averaged by Monte Carlo temperature.
 The effect of imposing a hard constraint on ring convexity can be seen through the two curves corresponding to $\ki=6$.
 These curves show very similar behaviour for $p_6\gtrsim0.3$, below which there is increasing deviation.
 This is as expected given the violation of ring convexity will only occur for very large rings at high temperatures, which can undergo deformation to reduce bond angle strain.
 This allows larger rings to pack next to each other, reducing the disassortativity.
+
 The behaviour of the pure 4\--coordinate system, $\ki=4$, is qualitatively the same as for the 3\--coordinate network, and indeed all the defects in figure \ref{fig:assortgen} have analogues in 4\--coordinate networks.
 The network of greater interest is that with mixed 3\-- and 4\--coordinate vertices, corresponding to $\ki=5$.
 In this case one can see fundamentally different properties as these networks are assortative at high $p_5$, in contrast to limiting pure coordination cases.
+
 This assortative mixing is readily explainable through energetic considerations.
 The hexagonal and square tilings are strainless and so the disruptive effects of any defect rings is minimised when such rings are adjacent.
 Unlike the hexagonal and square lattices, the Cairo lattice is not strainless, due to a distortion in one of the edge lengths in the pentagonal tiles.
@@ -744,7 +747,7 @@ It is for this same reason that the limit of $p_5\rightarrow 1$ cannot be reache
      \label{fig:assortmix}
 \end{figure}
 
-Finally the accuracy of the extension to \lm's maximum entropy method in equation \eqref{eq:mer} is assessed.
+Finally, the accuracy of the extension to \lm's maximum entropy method in equation \eqref{eq:mer} is assessed.
 Calculation of the maximum entropy joint degree distribution requires two parameters, $p_6$ and $r$, but the resulting distribution contains all the information required to calculate ring statistics, $p_k$, and the mean ring size about each ring, $m_k$.
 This has been performed using the parameters of $p_6$ and $r$ from hard disk simulations.
 As demonstrated in figure \ref{fig:lmgena}, the ring statistics calculated in this way regenerate those from \lm's law.
@@ -820,8 +823,9 @@ Although this is a simple consequence of the mechanical properties of the system
 \section{Chapter Conclusions}
 
 This chapter has thoroughly examined the network properties of a wide range of naturally occurring \td{} systems; spanning varying coordination environments, potential models and topologies.
-Data has been collected from a range of experimental sources, and have the theoretical bond switching method has been further developed to aid the study of these diverse systems computationally.
+Data has been collected from a range of experimental sources, and the theoretical bond switching method has been further developed to aid the study of these diverse systems computationally.
 These data have been analysed with rigorous metrics from network science, with the aim of highlighting the study of real\--world physical systems as an important and interesting addition to the wider field.
+
 In particular these networks display unique constraints as a result of their underlying physics.
 It has been shown that their mean node degree is fixed and the node degree distribution is well defined, following \lm's law.
 In addition the concept of network assortativity has been introduced to measure ring correlations, and its preference over the previous empirical measure known as the \aw{} law has been argued.
