--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -59,7 +59,7 @@ Figures \ref{fig:zach_high}\--\ref{fig:zach_low} show three such example tilings
          \label{fig:zach_low}
      \end{subfigure}
      
-     \caption{Panel (a) shows \zach's glass and panels (b)\--(d) three different periodic arrangements based on the glass (with one square removed to satisfy Euler's formula). Moving from panel (b)\--(d) there is increased clustering of similar sized rings. The size of the rings are highlighted numerically and by colour.}
+     \caption{Panel (a) shows \zach's glass and panels (b)\--(d) three different periodic arrangements based on the glass (with one square removed to satisfy Euler's formula). Moving from panel (b)\--(d) there is increased clustering of similar sized rings. The size of the rings are highlighted numerically and by colour (key: grey=6, blue<6, red>6).}
      \label{fig:zach}
 \end{figure}
 
@@ -81,16 +81,16 @@ This can be achieved in multiple ways.
 The most straightforward is to take one of the existing experimental images. 
 These are however limited in size and number and can contain defects or areas which cannot be fully imaged.
 In addition, some related experimental systems have proved significantly more challenging to synthesise, such as bilayers of germania, restricting the experimentally available data  \cite{Lewandowski2018,Lewandowski2019}.
-As a result, computational techniques are often preferable, but generating configurations will the required topological properties (\ie{} correct ring statistics \textit{and} \aw{} parameter) has proved surprisingly difficult \cite{Roy2018,Kumar2014}.
+As a result, computational techniques are often preferable, but generating configurations with the required topological properties (\ie{} correct ring statistics \textit{and} \aw{} parameter) has proved surprisingly difficult \cite{Roy2018,Kumar2014}.
 
 Therefore, the first part of this thesis will focus on developing methods to generate configurations of \td{} networks in which the topological parameters can be tuned in a controllable manner.
-These configurations can then be used as a seed for further computational studies, removing some of the reliance on experimental configurations and opening the door for high\--throughput calculations which can be speculative and potentially predictive.
+These configurations can then be used as a seed for further computational studies, removing some of the reliance on experimental configurations and opening the door for high throughput calculations which can be speculative and potentially predictive.
 
 However, the scope of this work extends beyond materials modelling.
 As previously mentioned, much of the original work in this field focussed on polycrystals of metal oxides, with some links to foams and Voronoi polygons \cite{Aboav1980,Boots1984}.
 It is now clear that these chemical networks fit into a much wider class of \td{} physical networks that are ubiquitous in the natural world, emerging across physical disciplines and length scales.
 Traditional examples range from the atomic level of ultra\--thin materials, through colloids, foams, epithelial cells and all the way to geological rock formations \cite{Earnshaw1994,Allain1995,Moncho-Jorda2000,Durand2011,Tong2017,Goehring2014}.
-There are however countless more occurrences, with drying blood, stratocumulus clouds, crocodile scales and geopolitical borders all being the subject of studies \cite{Brutin2011,Glassmeier2017,Milinkovitch2019,LeCaer1993}.
+There are however countless more occurrences, with drying blood, stratocumulus clouds, and geopolitical borders all being the subject of studies \cite{Brutin2011,Glassmeier2017,LeCaer1993}.
 
 Intriguingly, although these systems are incredibly physically diverse, they have strikingly similar structures \cite{Schliecker1999}. 
 This is because they can all be mapped onto the same generic system, which can be equivalently described as a collection of tessellating polygons or percolating rings, and hence they are governed by the same fundamental laws. 
@@ -122,8 +122,8 @@ Although the method is in its relative infancy, the effectiveness of persistent 
 These interrelated examples raise two important questions central to this work, namely why is the focus on \td{} systems, and why on computational modelling?
 To answer the first of these questions, one may argue it is precisely because there exist experimental realisations of quasi\--two\--dimensional systems, which have a range of technologically useful applications \cite{Butler2013,Bhimanapati2015,Tan2017}.
 Alternatively, it may be said that a \td{} system is in some way a simplified version of a \thd{} assembly, and so they provide a tractable way of studying the behaviours of higher dimensionality systems.
-Whilst both these statements have merit, neither is entirely satisfactory, as the former neglects to explain why such experiments are successful and latter is not universally true \cite{ChaikinPaulM1995}.
-Two\--dimensional systems can display their own unique constraints, which in fact often leads to the desirable properties of nanomaterials.
+Whilst both these statements have merit, neither is entirely satisfactory, as the former neglects to explain why such experiments are successful and the latter is not universally true \cite{ChaikinPaulM1995}.
+Two\--dimensional systems can display their own unique constraints, which in fact often leads to the desirable properties of nano\--materials.
 
 What study in two dimensions provides, is the opportunity to visualise, analyse and understand systems which are inherently more tangible.
 Raw data is available experimentally in real\--space, without the need for transformation, as required for example with structure factors or diffraction patterns.
@@ -136,7 +136,7 @@ As previously mentioned, experimental microscopy data from frontier research is 
 Computational models can help to bridge any gaps and provide information as to the frequency or stability of the observed sample.
 Moreover, computation has direct access to a greater number of observables than experiment, which can help provide explanation for a given phenomenon.
 Finally, and perhaps most importantly, simulation allows a holistic study of materials by continuously varying parameters to generate structures which may or may not map onto those from experiment.
-This enables properties to systematically explored, in principle leading to the holy grail of computational modelling, that of predictive capability.
+This enables properties to be systematically explored, in principle leading to the holy grail of computational modelling, that of predictive capability.
 
 This thesis will incorporate many of the above aspects to investigate the phenomenon of structural disorder in \td{} network\--forming materials.
 Computational models and methods will be developed to simulate a wide range of \td{} systems.
