--- a/text/publications.tex
+++ b/text/publications.tex
@@ -2,11 +2,11 @@ The work presented in this thesis has led to the following publications:
 
 \begin{itemize}
 
-	\item \textbf{Chapter 4}: \underline{D. Ormrod Morley} and M. Wilson, ``Constructing bilayers with tuneable ring statistics and topologies'', Mol. Phys., \textbf{117}, 3148–3157 (2019).
+	\item \textbf{Chapter 4}: \underline{D. Ormrod Morley} and M. Wilson, ``Constructing Bilayers with Tuneable Ring Statistics and Topologies'', Mol. Phys., \textbf{117}, 3148–3157 (2019).
 
-	\item \textbf{Chapter 5}: \underline{D. Ormrod Morley} and M. Wilson, ``Controlling disorder in two\--dimensional networks'', J. Phys. Condens. Matter, \textbf{30}, 50LT02 (2018).
+	\item \textbf{Chapter 5}: \underline{D. Ormrod Morley} and M. Wilson, ``Controlling Disorder in Two\--Dimensional Networks'', J. Phys. Condens. Matter, \textbf{30}, 50LT02 (2018).
 	
-	\item \textbf{Chapter 6}: \underline{D. Ormrod Morley}, A. L. Thorneywork, R. P. A. Dullens and M. Wilson, ``Generalized network theory of physical two\--dimensional systems'', Phys. Rev. E, \textbf{101}, 42309 (2020).
+	\item \textbf{Chapter 6}: \underline{D. Ormrod Morley}, A. L. Thorneywork, R. P. A. Dullens and M. Wilson, ``Generalized Network Theory of Physical Two\--Dimensional Systems'', Phys. Rev. E, \textbf{101}, 42309 (2020).
 	
 	\item \textbf{Chapter 7}: \underline{D. Ormrod Morley} and M. Wilson, ``Voronoi Diagrams in Quasi\--2D Hard Sphere Systems'', J. Stat. Mech., \textit{Accepted} (2020).
 	
@@ -16,8 +16,8 @@ The work presented in this thesis has led to the following publications:
 
 \begin{itemize}
 	
-	\item \textbf{Chapter 8}: \underline{D. Ormrod Morley}, A. L. Goodwin and M. Wilson, ``Ring structure of selected 2D procrystalline lattices'', \textit{Under review}.
+	\item \textbf{Chapter 8}: \underline{D. Ormrod Morley}, A. L. Goodwin and M. Wilson, ``Ring Structure of Selected 2D Procrystalline Lattices'', \textit{Under review}.
 	
-	\item \textbf{Chapter 9}: \underline{D. Ormrod Morley}, P. S. Salmon and M. Wilson, ``Persistent homology in two\--dimensional atomic networks'', \textit{In preparation}.
+	\item \textbf{Chapter 9}: \underline{D. Ormrod Morley}, P. S. Salmon and M. Wilson, ``Persistent Homology in Two\--Dimensional Atomic Networks'', \textit{In preparation}.
 	
 \end{itemize}
